prefixed all localization entries

--- a/src/main/resources/assets/tetra/lang/zh_cn.json
+++ b/src/main/resources/assets/tetra/lang/zh_cn.json
@@ -3,117 +3,117 @@
     "item.tetra.journal": "全息球",
     "item.tetra.journal.tooltip1": "当触碰球体时会将tetra的蓝图和部件信息投射在屏幕上",
     "item.tetra.journal.tooltip2": "[右键使用]",
-    "journal.craft.breadcrumb.root": "物品",
-    "journal.craft.sword": "剑",
-    "journal.craft.toolbelt": "工具带",
-    "journal.craft.tool": "工具",
-    "journal.craft.slot": "快卸销",
-    "journal.craft.requirements": "需求",
-    "journal.craft.improvements": "改进",
-    "journal.craft.stats": "属性",
-    "journal.craft.variants": "变种",
-    "workbench.slot_detail.details_tab": "详情",
-    "workbench.slot_detail.craft_tab": "合成",
-    "workbench.slot_detail.tweak_tab": "调整",
-    "workbench.slot_detail.tweak_apply": "应用",
-    "workbench.module_detail.empty": "空槽位",
-    "workbench.module_detail.not_tweakable": "调整不可用",
-    "workbench.schema_list.empty": "选定格子无升级可用。",
+    "tetra.journal.craft.breadcrumb.root": "物品",
+    "tetra.journal.craft.sword": "剑",
+    "tetra.journal.craft.toolbelt": "工具带",
+    "tetra.journal.craft.tool": "工具",
+    "tetra.journal.craft.slot": "快卸销",
+    "tetra.journal.craft.requirements": "需求",
+    "tetra.journal.craft.improvements": "改进",
+    "tetra.journal.craft.stats": "属性",
+    "tetra.journal.craft.variants": "变种",
+    "tetra.workbench.slot_detail.details_tab": "详情",
+    "tetra.workbench.slot_detail.craft_tab": "合成",
+    "tetra.workbench.slot_detail.tweak_tab": "调整",
+    "tetra.workbench.slot_detail.tweak_apply": "应用",
+    "tetra.workbench.module_detail.empty": "空槽位",
+    "tetra.workbench.module_detail.not_tweakable": "调整不可用",
+    "tetra.workbench.schema_list.empty": "选定格子无升级可用。",
     "repair_action.label": "修理",
-    "workbench.schema_detail.craft": "合成",
-    "workbench.schema_detail.back": "返回",
-    "workbench.schema_detail.experience": "这个操作需要 %d 等级的经验",
-    "workbench.schema_list.temporary": "按物品栏中的物品提供",
-    "capability.hammer": "锤打",
-    "capability.hammer.requirement": "这个动作需要一个 %d 级的锤",
-    "capability.axe": "砍伐",
-    "capability.axe.requirement": "这个动作需要一个 %d 级的斧",
-    "capability.pickaxe": "挖掘",
-    "capability.pickaxe.requirement": "这个动作需要一个 %d 级的镐",
-    "capability.shovel": "掘土",
-    "capability.shovel.requirement": "这个动作需要一个 %d 级的铲",
-    "capability.cut": "切断",
-    "capability.cut.requirement": "这个动作需要一个 %d 级的切割工具",
-    "capability.pry": "撬动",
-    "capability.pry.requirement": "这个动作需要一个 %d 级的撬棍工具",
-    "capability.available": "你有一个 %d 级的",
-    "stats.efficiency_suffix": "效率",
-    "stats.strength_suffix": "强度",
-    "stats.tier_suffix": "阶",
-    "stats.level_suffix": "等级",
-    "stats.durability": "耐久",
-    "stats.durability.tooltip": "这个物品有 \u00a7e%s\u00a7r 的耐久",
-    "stats.speed": "速度",
-    "stats.speed.tooltip": "决定了物品可以被挥舞得多快\n\n\u00a7e%s \u00a77秒的挥舞间隔\n\u00a7ex%s\u00a77 的挖掘速度倍率",
-    "stats.speed_normalized": "速度",
-    "stats.speed_normalized.tooltip": "将攻击速度改变\u00a7e%s",
-    "stats.damage": "伤害",
-    "stats.damage.tooltip": "造成 \u00a7e%s \u00a7r伤害",
-    "stats.bleeding": "流血",
-    "stats.bleeding.tooltip": "攻击生物时有 30%% 的概率使它们以 \u00a7e%s\u00a7r 的伤害持续流血 2 秒",
-    "stats.backstab": "背刺",
-    "stats.backstab.tooltip": "从后方攻击生物能造成 \u00a7e%s\u00a7r 的额外伤害",
-    "stats.armor": "护甲",
-    "stats.armor.tooltip": "持有时提供\u00a7e%s\u00a7r的护甲",
-    "stats.armorPenetration": "穿甲",
-    "stats.armorPenetration.tooltip": "攻击生物时总会造成 \u00a7e%s\u00a7r 的最低伤害，无视护甲",
-    "stats.unarmoredDamage": "切割",
-    "stats.unarmoredDamage.tooltip": "攻击无护甲的生物时造成 \u00a7e%s\u00a7r 的额外伤害",
-    "stats.knockback": "击退",
-    "stats.knockback.tooltip": "增加 \u00a7e%s\u00a7r 倍的击退距离",
-    "stats.looting": "抢夺",
-    "stats.looting.tooltip": "增加杀死生物的掉落物",
-    "stats.fiery": "炽热",
-    "stats.fiery.tooltip": "攻击生物时使它着火 \u00a7e%s\u00a7r 秒",
-    "stats.smite": "亡灵杀手",
-    "stats.smite.tooltip": "在攻击亡灵生物时造成 \u00a7e%s\u00a7r 的额外伤害",
-    "stats.arthropod": "节肢杀手",
-    "stats.arthropod.tooltip": "在攻击节肢生物时造成 \u00a7e%s\u00a7r 的额外伤害并附加 1-\u00a7e%s\u00a7r 秒的 缓慢 IV 效果",
-    "stats.sweeping": "横扫之刃",
-    "stats.sweeping.tooltip": "攻击生物时也对所有附近的敌人造成 \u00a7e%s\u00a7r 的武器伤害",
-    "stats.unbreaking": "耐久",
-    "stats.unbreaking.tooltip": "使用时有几率不减少耐久\n\n\u00a77耐久等级：\u00a7e%s\u00a77\n耐久不减少概率：\u00a7e%s%%",
-    "stats.mending": "经验修复",
-    "stats.mending.tooltip": "消耗获得的经验球以修复耐久，每点经验修复 \u00a7e%s\u00a7r 耐久\n\n\u00a77只在左手或右手持有时有效",
-    "stats.silkTouch": "精准采集",
-    "stats.silkTouch.tooltip": "破坏时掉落方块本身，而不是一般的掉落物",
-    "stats.fortune": "时运",
-    "stats.fortune.tooltip": "在采集或回收方块时增加掉落几率",
-    "stats.quickStrike": "迅捷",
-    "stats.quickStrike.tooltip": "在攻击冷却时将最小伤害减少到 \u00a7e%s\u00a7r",
-    "stats.softStrike": "软打击",
-    "stats.softStrike.tooltip": "使用这个工具合成的物品获得额外的耐久",
-    "stats.fierySelf": "燃烧",
-    "stats.fierySelf.tooltip": "使用时使用者有概率着火，在寒冷群系中概率较低\n\n\u00a77基础概率：\u00a7e%s\u00a77\n着火持续时间： \u00a7e%s",
-    "stats.enderReverb": "末影混响",
-    "stats.enderReverb.tooltip": "使用时激怒附近的末影人，并且附近的末影人传送时使用者有概率被一起传送\n\n\u00a77基础概率：\u00a7e%s\u00a77",
-    "stats.toolbelt.quickslot": "快捷栏",
-    "stats.toolbelt.quickslot.tooltip": "Has \u00a7e%s\u00a7r quickslots",
-    "stats.toolbelt.potion_storage": "药水栏",
-    "stats.toolbelt.potion_storage.tooltip": "有 \u00a7e%s\u00a7r 个药水空间",
-    "stats.toolbelt.storage": "存储栏",
-    "stats.toolbelt.storage.tooltip": "有 \u00a7e%s\u00a7r 个存储空间",
-    "stats.toolbelt.quiver": "快捷栏",
-    "stats.toolbelt.quiver.tooltip": "有 \u00a7e%s\u00a7r 个箭袋空间",
-    "stats.toolbelt.booster": "力量提升",
-    "stats.toolbelt.booster.tooltip": "提供跳跃提升和强度为 \u00a7e%s\u00a7r 的有限制的飞行",
-    "stats.criticalStrike": "暴击",
-    "stats.criticalStrike.tooltip": "当攻击或破坏方块是有几率暴击.\n\n\u00a7e%s\u00a77 几率造成 \u00a7e%s \u00a77伤害\n\u00a7e%s\u00a77 几率立即破坏方块\n\n\u00a77这个效果无法作用于硬度特别大的方块",
-    "stats.intuit": "直觉",
-    "stats.intuit.tooltip": "杀死生物或者破坏方块获得的经验值增加\u00a7e%sx\u00a7r 比例",
-    "stats.magicCapacity": "附魔容量",
-    "stats.magicCapacity.tooltip": "部件能承受的附魔容量, 在附魔时会被使用.\n\n\u00a77附魔容量: \u00a7e%s",
-    "stats.hammer.tooltip": "这个物品可被用于捶打，可在合成和回收时使用\n\n\u00a77锤等级：\u00a7e%s\n\u00a77:s锤效率：\u00a7e%s",
-    "stats.axe.tooltip": "这个物品可被用于砍伐木头\n\n\u00a77斧等级： \u00a7e%s\n\u00a77:s斧效率：\u00a7e%s",
-    "stats.pickaxe.tooltip": "这个物品可被用于挖掘\n\n\u00a77镐等级：\u00a7e%s\n\u00a77:s镐效率：\u00a7e%s",
-    "stats.shovel.tooltip": "这个物品可被用于掘土\n\n\u00a77铲子等级：\u00a7e%s\n\u00a77:s铲子效率：\u00a7e%s",
-    "stats.cut.tooltip": "这个物品可被用于切割，可用于合成和破坏蜘蛛网与植物\n\n\u00a77切割等级：\u00a7e%s\n\u00a77:s切割效率：\u00a7e%s",
-    "stats.pry.tooltip": "这个物品可被用于撬开东西，可被用于回收\n\n\u00a77撬棍等级：\u00a7e%s\n\u00a77:s撬棍效率：\u00a7e%s",
-    "stats.integrity": "完整度",
-    "stats.integrity.tooltip_positive": "这个组件提供 \u00a7e%s\u00a7r 的完整度",
-    "stats.integrity.tooltip_negative": "这个组件需要 \u00a7e%s\u00a7r 的完整度",
-    "stats.integrity_usage": "完整度使用：%s/%s",
-    "stats.integrity_usage.tooltip": "完整度由一些组件提供（通常在一些特定的位置），其它组件和大多数的改进需要完整度。",
+    "tetra.workbench.schema_detail.craft": "合成",
+    "tetra.workbench.schema_detail.back": "返回",
+    "tetra.workbench.schema_detail.experience": "这个操作需要 %d 等级的经验",
+    "tetra.workbench.schema_list.temporary": "按物品栏中的物品提供",
+    "tetra.capability.hammer": "锤打",
+    "tetra.capability.hammer.requirement": "这个动作需要一个 %d 级的锤",
+    "tetra.capability.axe": "砍伐",
+    "tetra.capability.axe.requirement": "这个动作需要一个 %d 级的斧",
+    "tetra.capability.pickaxe": "挖掘",
+    "tetra.capability.pickaxe.requirement": "这个动作需要一个 %d 级的镐",
+    "tetra.capability.shovel": "掘土",
+    "tetra.capability.shovel.requirement": "这个动作需要一个 %d 级的铲",
+    "tetra.capability.cut": "切断",
+    "tetra.capability.cut.requirement": "这个动作需要一个 %d 级的切割工具",
+    "tetra.capability.pry": "撬动",
+    "tetra.capability.pry.requirement": "这个动作需要一个 %d 级的撬棍工具",
+    "tetra.capability.available": "你有一个 %d 级的",
+    "tetra.stats.efficiency_suffix": "效率",
+    "tetra.stats.strength_suffix": "强度",
+    "tetra.stats.tier_suffix": "阶",
+    "tetra.stats.level_suffix": "等级",
+    "tetra.stats.durability": "耐久",
+    "tetra.stats.durability.tooltip": "这个物品有 \u00a7e%s\u00a7r 的耐久",
+    "tetra.stats.speed": "速度",
+    "tetra.stats.speed.tooltip": "决定了物品可以被挥舞得多快\n\n\u00a7e%s \u00a77秒的挥舞间隔\n\u00a7ex%s\u00a77 的挖掘速度倍率",
+    "tetra.stats.speed_normalized": "速度",
+    "tetra.stats.speed_normalized.tooltip": "将攻击速度改变\u00a7e%s",
+    "tetra.stats.damage": "伤害",
+    "tetra.stats.damage.tooltip": "造成 \u00a7e%s \u00a7r伤害",
+    "tetra.stats.bleeding": "流血",
+    "tetra.stats.bleeding.tooltip": "攻击生物时有 30%% 的概率使它们以 \u00a7e%s\u00a7r 的伤害持续流血 2 秒",
+    "tetra.stats.backstab": "背刺",
+    "tetra.stats.backstab.tooltip": "从后方攻击生物能造成 \u00a7e%s\u00a7r 的额外伤害",
+    "tetra.stats.armor": "护甲",
+    "tetra.stats.armor.tooltip": "持有时提供\u00a7e%s\u00a7r的护甲",
+    "tetra.stats.armorPenetration": "穿甲",
+    "tetra.stats.armorPenetration.tooltip": "攻击生物时总会造成 \u00a7e%s\u00a7r 的最低伤害，无视护甲",
+    "tetra.stats.unarmoredDamage": "切割",
+    "tetra.stats.unarmoredDamage.tooltip": "攻击无护甲的生物时造成 \u00a7e%s\u00a7r 的额外伤害",
+    "tetra.stats.knockback": "击退",
+    "tetra.stats.knockback.tooltip": "增加 \u00a7e%s\u00a7r 倍的击退距离",
+    "tetra.stats.looting": "抢夺",
+    "tetra.stats.looting.tooltip": "增加杀死生物的掉落物",
+    "tetra.stats.fiery": "炽热",
+    "tetra.stats.fiery.tooltip": "攻击生物时使它着火 \u00a7e%s\u00a7r 秒",
+    "tetra.stats.smite": "亡灵杀手",
+    "tetra.stats.smite.tooltip": "在攻击亡灵生物时造成 \u00a7e%s\u00a7r 的额外伤害",
+    "tetra.stats.arthropod": "节肢杀手",
+    "tetra.stats.arthropod.tooltip": "在攻击节肢生物时造成 \u00a7e%s\u00a7r 的额外伤害并附加 1-\u00a7e%s\u00a7r 秒的 缓慢 IV 效果",
+    "tetra.stats.sweeping": "横扫之刃",
+    "tetra.stats.sweeping.tooltip": "攻击生物时也对所有附近的敌人造成 \u00a7e%s\u00a7r 的武器伤害",
+    "tetra.stats.unbreaking": "耐久",
+    "tetra.stats.unbreaking.tooltip": "使用时有几率不减少耐久\n\n\u00a77耐久等级：\u00a7e%s\u00a77\n耐久不减少概率：\u00a7e%s%%",
+    "tetra.stats.mending": "经验修复",
+    "tetra.stats.mending.tooltip": "消耗获得的经验球以修复耐久，每点经验修复 \u00a7e%s\u00a7r 耐久\n\n\u00a77只在左手或右手持有时有效",
+    "tetra.stats.silkTouch": "精准采集",
+    "tetra.stats.silkTouch.tooltip": "破坏时掉落方块本身，而不是一般的掉落物",
+    "tetra.stats.fortune": "时运",
+    "tetra.stats.fortune.tooltip": "在采集或回收方块时增加掉落几率",
+    "tetra.stats.quickStrike": "迅捷",
+    "tetra.stats.quickStrike.tooltip": "在攻击冷却时将最小伤害减少到 \u00a7e%s\u00a7r",
+    "tetra.stats.softStrike": "软打击",
+    "tetra.stats.softStrike.tooltip": "使用这个工具合成的物品获得额外的耐久",
+    "tetra.stats.fierySelf": "燃烧",
+    "tetra.stats.fierySelf.tooltip": "使用时使用者有概率着火，在寒冷群系中概率较低\n\n\u00a77基础概率：\u00a7e%s\u00a77\n着火持续时间： \u00a7e%s",
+    "tetra.stats.enderReverb": "末影混响",
+    "tetra.stats.enderReverb.tooltip": "使用时激怒附近的末影人，并且附近的末影人传送时使用者有概率被一起传送\n\n\u00a77基础概率：\u00a7e%s\u00a77",
+    "tetra.stats.toolbelt.quickslot": "快捷栏",
+    "tetra.stats.toolbelt.quickslot.tooltip": "Has \u00a7e%s\u00a7r quickslots",
+    "tetra.stats.toolbelt.potion_storage": "药水栏",
+    "tetra.stats.toolbelt.potion_storage.tooltip": "有 \u00a7e%s\u00a7r 个药水空间",
+    "tetra.stats.toolbelt.storage": "存储栏",
+    "tetra.stats.toolbelt.storage.tooltip": "有 \u00a7e%s\u00a7r 个存储空间",
+    "tetra.stats.toolbelt.quiver": "快捷栏",
+    "tetra.stats.toolbelt.quiver.tooltip": "有 \u00a7e%s\u00a7r 个箭袋空间",
+    "tetra.stats.toolbelt.booster": "力量提升",
+    "tetra.stats.toolbelt.booster.tooltip": "提供跳跃提升和强度为 \u00a7e%s\u00a7r 的有限制的飞行",
+    "tetra.stats.criticalStrike": "暴击",
+    "tetra.stats.criticalStrike.tooltip": "当攻击或破坏方块是有几率暴击.\n\n\u00a7e%s\u00a77 几率造成 \u00a7e%s \u00a77伤害\n\u00a7e%s\u00a77 几率立即破坏方块\n\n\u00a77这个效果无法作用于硬度特别大的方块",
+    "tetra.stats.intuit": "直觉",
+    "tetra.stats.intuit.tooltip": "杀死生物或者破坏方块获得的经验值增加\u00a7e%sx\u00a7r 比例",
+    "tetra.stats.magicCapacity": "附魔容量",
+    "tetra.stats.magicCapacity.tooltip": "部件能承受的附魔容量, 在附魔时会被使用.\n\n\u00a77附魔容量: \u00a7e%s",
+    "tetra.stats.hammer.tooltip": "这个物品可被用于捶打，可在合成和回收时使用\n\n\u00a77锤等级：\u00a7e%s\n\u00a77:s锤效率：\u00a7e%s",
+    "tetra.stats.axe.tooltip": "这个物品可被用于砍伐木头\n\n\u00a77斧等级： \u00a7e%s\n\u00a77:s斧效率：\u00a7e%s",
+    "tetra.stats.pickaxe.tooltip": "这个物品可被用于挖掘\n\n\u00a77镐等级：\u00a7e%s\n\u00a77:s镐效率：\u00a7e%s",
+    "tetra.stats.shovel.tooltip": "这个物品可被用于掘土\n\n\u00a77铲子等级：\u00a7e%s\n\u00a77:s铲子效率：\u00a7e%s",
+    "tetra.stats.cut.tooltip": "这个物品可被用于切割，可用于合成和破坏蜘蛛网与植物\n\n\u00a77切割等级：\u00a7e%s\n\u00a77:s切割效率：\u00a7e%s",
+    "tetra.stats.pry.tooltip": "这个物品可被用于撬开东西，可被用于回收\n\n\u00a77撬棍等级：\u00a7e%s\n\u00a77:s撬棍效率：\u00a7e%s",
+    "tetra.stats.integrity": "完整度",
+    "tetra.stats.integrity.tooltip_positive": "这个组件提供 \u00a7e%s\u00a7r 的完整度",
+    "tetra.stats.integrity.tooltip_negative": "这个组件需要 \u00a7e%s\u00a7r 的完整度",
+    "tetra.stats.integrity_usage": "完整度使用：%s/%s",
+    "tetra.stats.integrity_usage.tooltip": "完整度由一些组件提供（通常在一些特定的位置），其它组件和大多数的改进需要完整度。",
     "item.tetra.modular.broken": "破损",
     "item.tetra.modular.empty_slot": "空",
     "item.tetra.modular.magic_capacity.label": "附魔容量",
@@ -146,7 +146,7 @@
     "block.tetra.forged_vent": "Forged vent",
     "block.tetra.forged_crate": "锻钢箱",
     "block.tetra.forged_container": "锻钢货柜",
-    "forged_container.compartment": "隔间 %s",
+    "tetra.forged_container.compartment": "隔间 %s",
     "block.tetra.hammer_base": "锤子底座",
     "block.tetra.hammer_head": "锤子头部",
     "block.tetra.transfer_unit": "Transfer unit",
@@ -194,8 +194,8 @@
     "settled.toast": "一个组件被固定了！",
     "arrested.name": "无法固定",
     "arrested.description": "这个部件是由无法固定的材料制作的",
-    "hone.progress": "打磨进度：%s%%",
-    "hone.available": "可以打磨",
+    "tetra.hone.progress": "打磨进度：%s%%",
+    "tetra.hone.available": "可以打磨",
     "item.tetra.modular.synergy_indicator.empty": "这个部件不能享受协同加成",
     "item.tetra.modular.synergy_indicator.header": "协同加成:",
     "repair_schema.name": "修理",
@@ -1457,15 +1457,15 @@
     "toolbelt/slot2": "",
     "toolbelt/slot3": "",
     "toolbelt/belt": "腰带",
-    "toolbelt.full": "工具带已满",
-    "toolbelt.blocked": "物品栏已满，请先腾出一些空间来",
-    "toolbelt.binding.group": "Tetra 工具带",
-    "toolbelt.binding.access": "快速访问",
-    "toolbelt.binding.restock": "重装",
-    "toolbelt.effect.tooltip.quick.quickAccess": "一个合适的工具可以被快速的从这个槽位取出",
-    "toolbelt.effect.tooltip.quiver.quickAccess": "箭可以从这一格被直接取出",
-    "toolbelt.effect.tooltip.storage.quickAccess": "物品可以被重装入这一格",
-    "toolbelt.effect.tooltip.storage.cellSocket": "模块可以从这个位置中的电池中获取电",
+    "tetra.toolbelt.full": "工具带已满",
+    "tetra.toolbelt.blocked": "物品栏已满，请先腾出一些空间来",
+    "tetra.toolbelt.binding.group": "Tetra 工具带",
+    "tetra.toolbelt.binding.access": "快速访问",
+    "tetra.toolbelt.binding.restock": "重装",
+    "tetra.toolbelt.effect.tooltip.quick.quickAccess": "一个合适的工具可以被快速的从这个槽位取出",
+    "tetra.toolbelt.effect.tooltip.quiver.quickAccess": "箭可以从这一格被直接取出",
+    "tetra.toolbelt.effect.tooltip.storage.quickAccess": "物品可以被重装入这一格",
+    "tetra.toolbelt.effect.tooltip.storage.cellSocket": "模块可以从这个位置中的电池中获取电",
     "toolbelt_belt0.name": "羊毛腰带",
     "toolbelt_belt0.description": "绳子和皮革碎片被证明是方便使用工具的好材料，但是绳子缺乏支撑附加工具的能力。用毛线编织腰带，应该比简单地系上腰带相比，能提供更好的支撑。",
     "toolbelt_belt0.slot1": "羊毛",
