Localize advancement titles/descriptions

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2427,5 +2427,80 @@
   "tetra.tweak.bow/adjustable_strength.label": "Bow strength",
   "tetra.tweak.bow/adjustable_strength.tooltip": "§eTighten§r the bolts to increase the bow strength, increasing damage.\n§eLoosen§r the bolts to make the bow easier to draw, increasing draw speed.",
   "tetra.tweak.bow/adjustable_strength.left": "Loose",
-  "tetra.tweak.bow/adjustable_strength.right": "Tight"
+  "tetra.tweak.bow/adjustable_strength.right": "Tight",
+
+  "tetra.advancements.story.more_upgrades.title": "Basic Tinkering",
+  "tetra.advancements.story.more_upgrades.description": "Craft a mallet from sticks and logs\n\n§8§oTetra begins",
+
+  "tetra.advancements.spelunking.root.title": "Spelunking",
+  "tetra.advancements.spelunking.root.description": "Delve deep underground",
+  "tetra.advancements.spelunking.ancient_ruins.title" : "Long Gone",
+  "tetra.advancements.spelunking.ancient_ruins.description": "Find ancient ruins deep down in a cold biome",
+  "tetra.advancements.spelunking.containers.title": "\"Salvage\"",
+  "tetra.advancements.spelunking.containers.description": "Hit the highlighted areas on crates and containers with the correct tools to break them open",
+  "tetra.advancements.spelunking.earthpiercer.title": "Planetary Piercing",
+  "tetra.advancements.spelunking.earthpiercer.description": "Find an earthpiercer and attach it to a handle",
+  "tetra.advancements.spelunking.find_bolt.title": "Thunderbolt 4",
+  "tetra.advancements.spelunking.find_bolt.description": "Salvage some bolts from the ancient ruins",
+  "tetra.advancements.spelunking.find_cell.title": "Thermal Theft",
+  "tetra.advancements.spelunking.find_cell.description": "Find a thermal cell in the ancient ruins",
+  "tetra.advancements.spelunking.find_latch.title": "§oClick Click Click Click",
+  "tetra.advancements.spelunking.find_latch.description": "Salvage a quick latch from the ancient ruins and use it to improve a toolbelt attachment",
+  "tetra.advancements.spelunking.fuel_hammer.title": "Dust Off",
+  "tetra.advancements.spelunking.fuel_hammer.description": "Fuel up a forge hammer using charged thermal cells",
+  "tetra.advancements.spelunking.geode.title": "Hollow Solids",
+  "tetra.advancements.spelunking.geode.description": "Find a geode in the depths",
+  "tetra.advancements.spelunking.geode_open.title": "Mineral Crackers",
+  "tetra.advancements.spelunking.geode_open.description": "Upgrade a mallet and use it to break open a geode at a workbench",
+  "tetra.advancements.spelunking.hammer_config.title": "Overdrive",
+  "tetra.advancements.spelunking.hammer_config.description": "Configure a forge hammer to provide tier 5 hammering",
+  "tetra.advancements.spelunking.hammer_craft.title": "Magmatic Press Channel",
+  "tetra.advancements.spelunking.hammer_craft.description": "Use a forge hammer to craft a module requiring tier 4 hammering",
+  "tetra.advancements.spelunking.hammer_plate.title": "Plated Insulation",
+  "tetra.advancements.spelunking.hammer_plate.description": "Fully patch up a forge hammer with forged plates to increase its fuel efficiency",
+  "tetra.advancements.spelunking.loot_ruins.title": "Silk Touched Tiles",
+  "tetra.advancements.spelunking.loot_ruins.description": "Successfully harvest flooring from the ancient ruins",
+  "tetra.advancements.spelunking.pristine_socket.title": "Immaculate Insert",
+  "tetra.advancements.spelunking.pristine_socket.description": "Find a pristine gem in a geode and use it to socket a sword or a tool",
+  "tetra.advancements.spelunking.refill_cell.title": "Excitement",
+  "tetra.advancements.spelunking.refill_cell.description": "Use a transfer unit or a core extractor to fully charge a thermal cell",
+  "tetra.advancements.spelunking.stonecutter.title": "Like Butter",
+  "tetra.advancements.spelunking.stonecutter.description": "Find a stonecutter and attach it to a hilt",
+  "tetra.advancements.spelunking.use_bolt.title": "Tweaked to Perfection",
+  "tetra.advancements.spelunking.use_bolt.description": "Use a bolt to bind a tool or a sword, then use the tweak tab in a workbench to change the stats of the item",
+
+  "tetra.advancements.upgrades.root.title": "Basic Tinkering",
+  "tetra.advancements.upgrades.root.description": "Craft a mallet from sticks and logs\n\nItem Reward: Holosphere",
+  "tetra.advancements.upgrades.bow_upgrade.title": "Bowow",
+  "tetra.advancements.upgrades.bow_upgrade.description": "Upgrade a bow in a workbench",
+  "tetra.advancements.upgrades.double_headed.title": "[?] Double headed tools",
+  "tetra.advancements.upgrades.double_headed.description": "When using double headed tools (e.g. pickaxes, axes, hammers) it's only the head with the highest value that will be considered when determining damage or harvest efficiency.",
+  "tetra.advancements.upgrades.hammer_2.title": "Hammer II",
+  "tetra.advancements.upgrades.hammer_2.description": "Smelt stone and use it to craft a double-sided hammer head",
+  "tetra.advancements.upgrades.hammer_3.title": "Hammer III",
+  "tetra.advancements.upgrades.hammer_3.description": "Gain access to the third hammer tier by crafting a double sided iron hammer",
+  "tetra.advancements.upgrades.hammer_4.title": "Hammer IV",
+  "tetra.advancements.upgrades.hammer_4.description": "Use a forge hammer to craft a module requiring tier 4 hammering",
+  "tetra.advancements.upgrades.hammer_go.title": "Four to go",
+  "tetra.advancements.upgrades.hammer_go.description": "Figure out how to use a forge hammer to craft an obsidian hammer",
+  "tetra.advancements.upgrades.repairs.title": "[?] Repairing modular items",
+  "tetra.advancements.upgrades.repairs.description": "Modular items can be repaired in a workbench.\n * Repairing an item will require materials (and appropriate tools) for one of its modules\n * Repairing will cycle over all of the item's modules\n * Repairing magically unstable modules will cost experience\n * Each repair fully restores the durability of the item",
+  "tetra.advancements.upgrades.sword_hone.title": "Honed Blade",
+  "tetra.advancements.upgrades.sword_hone.description": "Use a sword until it can be honed, then hone it at a workbench",
+  "tetra.advancements.upgrades.sword_hone_peak.title": "Tall Build",
+  "tetra.advancements.upgrades.sword_hone_peak.description": "Hone the speed or damage of a hilt or a blade to level 5",
+  "tetra.advancements.upgrades.sword_improvement_hone.title": "Double Up!",
+  "tetra.advancements.upgrades.sword_improvement_hone.description": "Apply an improvement to a sword module, and then hone that improvement to increase its effect",
+  "tetra.advancements.upgrades.sword_integrity.title": "Tightly Wrought",
+  "tetra.advancements.upgrades.sword_integrity.description": "Upgrade a sword's hilt or strengthen the sword with a binding to increase its integrity",
+  "tetra.advancements.upgrades.sword_upgrade.title": "Cutting a New One",
+  "tetra.advancements.upgrades.sword_upgrade.description": "Place a vanilla sword in a workbench and upgrade it",
+  "tetra.advancements.upgrades.toolbelt.title": "Stay Hip",
+  "tetra.advancements.upgrades.toolbelt.description": "Find a way to easily access your tools",
+  "tetra.advancements.upgrades.toolbelt_upgraded.title": "Wrapped Up",
+  "tetra.advancements.upgrades.toolbelt_upgraded.description": "Fully upgrade a toolbelt",
+  "tetra.advancements.upgrades.tool_upgrade.title": "Getting Another Upgrade",
+  "tetra.advancements.upgrades.tool_upgrade.description": "Place a vanilla tool such as a pickaxe, axe or a hoe in a workbench and upgrade it",
+  "tetra.advancements.upgrades.workbench.title": "Bench mk II",
+  "tetra.advancements.upgrades.workbench.description": "Upgrade a crafting table by right-clicking it with a mallet"
 }
