--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -301,6 +301,8 @@
   "item.tetra.modular.settle_full_null.label": "Fully settled",
   "item.tetra.modular.settle_full_null.description": "The simplicity of this module makes it easy to fit into place and it does not need to settle any further",
 
+  "basic_pickaxe/cobblestone": "BEEP",
+
   "tetra.module_improvement.settled.name": "Settled",
   "tetra.module_improvement.settled.description": "Due to extended use this module has settled into place, it provides additional integrity",
   "tetra.settled.toast": "A module has settled!",
