feat: added modular shields

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -86,6 +86,9 @@
   "tetra.stats.armor": "Armor",
   "tetra.stats.armor.tooltip": "Provides §e%s§r armor when held",
 
+  "tetra.stats.toughness": "Toughness",
+  "tetra.stats.toughness.tooltip": "Provides §e%s§r toughness when held",
+
   "tetra.stats.armorPenetration": "Penetrating",
   "tetra.stats.armorPenetration.tooltip": "Hitting an entity will always deal at least §e%s§r damage regardless of the targets armor",
 
@@ -1847,8 +1850,8 @@
   "tetra.variant.spearhead/jungle.prefix": "Jungle",
   "tetra.variant.spearhead/acacia": "Acacia spearhead",
   "tetra.variant.spearhead/acacia.prefix": "Acacia",
-  "tetra.variant.spearhead/dark_oak": "Dark_oak spearhead",
-  "tetra.variant.spearhead/dark_oak.prefix": "Dark_oak",
+  "tetra.variant.spearhead/dark_oak": "Dark oak spearhead",
+  "tetra.variant.spearhead/dark_oak.prefix": "Dark oak",
   "tetra.variant.spearhead/cobblestone": "Stone spearhead",
   "tetra.variant.spearhead/cobblestone.prefix": "Stone",
   "tetra.variant.spearhead/stone": "Stone spearhead",
@@ -2256,6 +2259,145 @@
   "tetra.tweak.bow/adjustable_strength.tooltip": "§eTighten§r the bolts to increase the bow strength, increasing damage.\n§eLoosen§r the bolts to make the bow easier to draw, increasing draw speed.",
   "tetra.tweak.bow/adjustable_strength.left": "Loose",
   "tetra.tweak.bow/adjustable_strength.right": "Tight",
+
+  "tetra.slot.shield/plate": "Plate",
+  "tetra.slot.shield/grip": "Grip",
+  "tetra.slot.shield/boss": "Boss",
+
+  "tetra/schema/shield/tower.name": "Tower plate",
+  "tetra/schema/shield/tower.description": "Craft a tower shield plate from the given materials. Tower shields are large and unwieldy but block good.",
+  "tetra/schema/shield/tower.slot1": "Material",
+
+  "tetra.module.shield/tower.item_name": "Tower shield",
+  "tetra.module.shield/tower.name": "Tower shield",
+  "tetra.module.shield/tower.description": "A large tower shield, tower shields are large and unwieldy but block good.",
+
+  "tetra.variant.tower/wooden": "Wooden tower plate",
+  "tetra.variant.tower/wooden.prefix": "wooden",
+  "tetra.variant.tower/spruce": "Spruce tower plate",
+  "tetra.variant.tower/spruce.prefix": "spruce",
+  "tetra.variant.tower/birch": "Birch tower plate",
+  "tetra.variant.tower/birch.prefix": "birch",
+  "tetra.variant.tower/jungle": "Jungle tower plate",
+  "tetra.variant.tower/jungle.prefix": "jungle",
+  "tetra.variant.tower/acacia": "Acacia tower plate",
+  "tetra.variant.tower/acacia.prefix": "acacia",
+  "tetra.variant.tower/dark_oak": "Dark oak tower plate",
+  "tetra.variant.tower/dark_oak.prefix": "Dark oak",
+  "tetra.variant.tower/maple": "Maple tower plate",
+  "tetra.variant.tower/maple.prefix": "maple",
+  "tetra.variant.tower/cherry": "Cherry tower plate",
+  "tetra.variant.tower/cherry.prefix": "cherry",
+  "tetra.variant.tower/baobab": "Baobab tower plate",
+  "tetra.variant.tower/baobab.prefix": "baobab",
+  "tetra.variant.tower/bone": "Bone tower plate",
+  "tetra.variant.tower/bone.prefix": "bone",
+  "tetra.variant.tower/iron": "Iron tower plate",
+  "tetra.variant.tower/iron.prefix": "iron",
+  "tetra.variant.tower/bronze": "Bronze tower plate",
+  "tetra.variant.tower/bronze.prefix": "bronze",
+  "tetra.variant.tower/steel": "Steel tower plate",
+  "tetra.variant.tower/steel.prefix": "steel",
+  "tetra.variant.tower/vent": "Vent plate tower",
+
+  "tetra/schema/shield/heater.name": "Heater plate",
+  "tetra/schema/shield/heater.description": "Craft a heater shield plate from the given materials. Heaters medium size shield and average in terms of speed, utility and blocking.",
+  "tetra/schema/shield/heater.slot1": "Material",
+
+  "tetra.module.shield/heater.item_name": "Heater shield",
+  "tetra.module.shield/heater.name": "Heater plate",
+  "tetra.module.shield/heater.description": "The heater shield is a medium size shield and is average in terms of speed, utility and blocking",
+
+  "tetra.variant.heater/wooden": "Wooden heater plate",
+  "tetra.variant.heater/wooden.prefix": "wooden",
+  "tetra.variant.heater/spruce": "Spruce heater plate",
+  "tetra.variant.heater/spruce.prefix": "spruce",
+  "tetra.variant.heater/birch": "Birch heater plate",
+  "tetra.variant.heater/birch.prefix": "birch",
+  "tetra.variant.heater/jungle": "Jungle heater plate",
+  "tetra.variant.heater/jungle.prefix": "jungle",
+  "tetra.variant.heater/acacia": "Acacia heater plate",
+  "tetra.variant.heater/acacia.prefix": "acacia",
+  "tetra.variant.heater/dark_oak": "Dark oak heater plate",
+  "tetra.variant.heater/dark_oak.prefix": "Dark oak",
+  "tetra.variant.heater/maple": "Maple heater plate",
+  "tetra.variant.heater/maple.prefix": "maple",
+  "tetra.variant.heater/cherry": "Cherry heater plate",
+  "tetra.variant.heater/cherry.prefix": "cherry",
+  "tetra.variant.heater/baobab": "Baobab heater plate",
+  "tetra.variant.heater/baobab.prefix": "baobab",
+  "tetra.variant.heater/bone": "Bone heater plate",
+  "tetra.variant.heater/bone.prefix": "bone",
+  "tetra.variant.heater/iron": "Iron heater plate",
+  "tetra.variant.heater/iron.prefix": "iron",
+  "tetra.variant.heater/bronze": "Bronze heater plate",
+  "tetra.variant.heater/bronze.prefix": "bronze",
+  "tetra.variant.heater/steel": "Steel heater plate",
+  "tetra.variant.heater/steel.prefix": "steel",
+  "tetra.variant.heater/vent": "Vent plate heater",
+
+  "tetra/schema/shield/buckler.name": "Buckler plate",
+  "tetra/schema/shield/buckler.description": "Craft a buckler from the given materials. Bucklers are small and make up for their lack of blocking capabilities with high speed and good utility.",
+  "tetra/schema/shield/buckler.slot1": "Material",
+
+  "tetra.module.shield/buckler.item_name": "Buckler",
+  "tetra.module.shield/buckler.name": "Buckler plate",
+  "tetra.module.shield/buckler.description": "Bucklers are small and make up for their lack of blocking capabilities with high speed and good utility.",
+
+  "tetra.variant.buckler/wooden": "Wooden buckler plate",
+  "tetra.variant.buckler/wooden.prefix": "wooden",
+  "tetra.variant.buckler/spruce": "Spruce buckler plate",
+  "tetra.variant.buckler/spruce.prefix": "spruce",
+  "tetra.variant.buckler/birch": "Birch buckler plate",
+  "tetra.variant.buckler/birch.prefix": "birch",
+  "tetra.variant.buckler/jungle": "Jungle buckler plate",
+  "tetra.variant.buckler/jungle.prefix": "jungle",
+  "tetra.variant.buckler/acacia": "Acacia buckler plate",
+  "tetra.variant.buckler/acacia.prefix": "acacia",
+  "tetra.variant.buckler/dark_oak": "Dark oak buckler plate",
+  "tetra.variant.buckler/dark_oak.prefix": "Dark oak",
+  "tetra.variant.buckler/maple": "Maple buckler plate",
+  "tetra.variant.buckler/maple.prefix": "maple",
+  "tetra.variant.buckler/cherry": "Cherry buckler plate",
+  "tetra.variant.buckler/cherry.prefix": "cherry",
+  "tetra.variant.buckler/baobab": "Baobab buckler plate",
+  "tetra.variant.buckler/baobab.prefix": "baobab",
+  "tetra.variant.buckler/bone": "Bone buckler plate",
+  "tetra.variant.buckler/bone.prefix": "bone",
+  "tetra.variant.buckler/iron": "Iron buckler plate",
+  "tetra.variant.buckler/iron.prefix": "iron",
+  "tetra.variant.buckler/bronze": "Bronze buckler plate",
+  "tetra.variant.buckler/bronze.prefix": "bronze",
+  "tetra.variant.buckler/steel": "Steel buckler plate",
+  "tetra.variant.buckler/steel.prefix": "steel",
+  "tetra.variant.buckler/vent": "Vent plate buckler",
+
+  "tetra/schema/shield/basic_grip.name": "Basic grip",
+  "tetra/schema/shield/basic_grip.description": "Craft a basic grip from the given materials. Grips are the primary source of integrity for shields.",
+  "tetra/schema/shield/basic_grip.slot1": "Material",
+
+  "tetra.module.shield/basic_grip.item_name": "Basic grip",
+  "tetra.module.shield/basic_grip.name": "Basic grip",
+  "tetra.module.shield/basic_grip.description": "A basic grip. Grips are the primary source of integrity for shields.",
+
+  "tetra.variant.basic_grip/oak": "Basic oak grip",
+  "tetra.variant.basic_grip/iron":"Basic iron grip",
+
+  "tetra/schema/shield/studs.name": "Apply studs",
+  "tetra/schema/shield/studs.description": "Nail studs into the shield plate to increase it's durability.",
+  "tetra/schema/shield/studs.slot1": "Material",
+
+  "tetra.improvement.shield/studs.name": "Studded",
+  "tetra.improvement.shield/studs.description": "Increases durability",
+
+  "tetra/schema/shield/trim.name": "Apply trim",
+  "tetra/schema/shield/trim.description": "Frame the shield with a trim to increase it's durability.",
+  "tetra/schema/shield/trim.slot1": "Material",
+
+  "tetra.improvement.shield/trim.name": "Iron trim",
+  "tetra.improvement.shield/trim.description": "Increases durability",
+  "tetra.improvement.shield/trim_scrap.name": "Scrap trim",
+  "tetra.improvement.shield/trim_scrap.description": "Increases durability",
 
   "tetra.advancements.story.more_upgrades.title": "Basic Tinkering",
   "tetra.advancements.story.more_upgrades.description": "Craft a mallet from sticks and logs\n\n§8§oTetra begins",
