change: added shield to holosphere

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -7,9 +7,10 @@
   "tetra.journal.craft.breadcrumb.root": "Items",
   "tetra.journal.craft.modular_sword": "Blades",
   "tetra.journal.craft.modular_toolbelt": "Toolbelts",
-  "tetra.journal.craft.modular_double": "Double headed tools",
-  "tetra.journal.craft.modular_single": "Single headed tools",
+  "tetra.journal.craft.modular_double": "Double headed",
+  "tetra.journal.craft.modular_single": "Single headed",
   "tetra.journal.craft.modular_bow": "Bows",
+  "tetra.journal.craft.modular_shield": "Shields",
   "tetra.journal.craft.slot": "Slot",
   "tetra.journal.craft.requirements": "Requirements",
   "tetra.journal.craft.improvements": "Improvements",
