--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2275,12 +2275,12 @@
   "tetra.slot.shield/boss": "Boss",
 
   "tetra/schema/shield/tower.name": "Tower plate",
-  "tetra/schema/shield/tower.description": "Craft a tower shield plate from the given materials. Tower shields are large and unwieldy but block good.",
+  "tetra/schema/shield/tower.description": "Craft a tower shield plate from the given materials. Tower shields can block indefinitely and has no cooldown, but it uses more integrity than other types of shields.",
   "tetra/schema/shield/tower.slot1": "Material",
 
   "tetra.module.shield/tower.item_name": "Tower shield",
   "tetra.module.shield/tower.name": "Tower shield",
-  "tetra.module.shield/tower.description": "A large tower shield, tower shields are large and unwieldy but block good.",
+  "tetra.module.shield/tower.description": "A large tower shield that can block indefinitely and has no cooldown.",
 
   "tetra.variant.tower/wooden": "Wooden tower plate",
   "tetra.variant.tower/wooden.prefix": "wooden",
@@ -2311,12 +2311,12 @@
   "tetra.variant.tower/vent": "Vent plate tower",
 
   "tetra/schema/shield/heater.name": "Heater plate",
-  "tetra/schema/shield/heater.description": "Craft a heater shield plate from the given materials. Heaters are medium size shields that cost less integrity that a tower shield, but can only block for a limited amount of time before going on cooldown.",
+  "tetra/schema/shield/heater.description": "Craft a heater shield plate from the given materials. Heaters are medium size shields that uses less integrity than a tower shield, but can only block for a limited amount of time before going on cooldown.",
   "tetra/schema/shield/heater.slot1": "Material",
 
   "tetra.module.shield/heater.item_name": "Heater shield",
   "tetra.module.shield/heater.name": "Heater plate",
-  "tetra.module.shield/heater.description": "The heater shield is a medium size shield that cost less integrity, but can only block for a limited amount of time before going on cooldown.",
+  "tetra.module.shield/heater.description": "The heater shield is a medium size shield that can only block for a limited amount of time before going on cooldown.",
 
   "tetra.variant.heater/wooden": "Wooden heater plate",
   "tetra.variant.heater/wooden.prefix": "wooden",
@@ -2347,7 +2347,7 @@
   "tetra.variant.heater/vent": "Vent plate heater",
 
   "tetra/schema/shield/buckler.name": "Buckler plate",
-  "tetra/schema/shield/buckler.description": "Craft a buckler from the given materials. Bucklers cannot be used to block but provide a passive toughness bonus instead.",
+  "tetra/schema/shield/buckler.description": "Craft a buckler from the given materials. Bucklers cannot be used to block but they provide a passive toughness bonus.",
   "tetra/schema/shield/buckler.slot1": "Material",
 
   "tetra.module.shield/buckler.item_name": "Buckler",
